# UAP_Machine-Learning

./: .gitignore  .pdm-python  LICENSE  README.md  app.py  evaluate_all_models.py  evaluate_bert.py  evaluate_distilbert.py  evaluate_lstm.py  evaluate_nn_base.py  pyproject.toml  train_bert.py  train_distilbert.py  train_lstm.py  train_text.py
data/: spam.csv
file_ipynb/: Model_Bert_UAP_Machine_Learning.ipynb  Model_Distilbert_UAP_Machine_Learning.ipynb  Model_LSTM_UAP_Machine_Learning.ipynb
model_lstm/: model_lstm.pt  vocab.pt
model_nn_base/: vectorizer.pkl
